# MIPT_ProgrammingLanguages

./: CMakeLists.txt  README.md  compile.sh  run.sh
Task 1 - Qt Wrapper/: CMakeLists.txt
Task 1 - Qt Wrapper/inc/: Layout.h  PushButton.h
Task 1 - Qt Wrapper/src/: Label.cpp  Layout.cpp  Object.cpp  PushButton.cpp  Widget.cpp
Task 1 - Qt Wrapper/tests/: test1.c  test2.c  widgets.h
Task 2 - Spreadsheet/: index.html  lexer.js  script.js  utilities.js
Task 3 - Tic-Tac-Toe/: communicators.js  games.js  index.js  package.json  player.js
Task 3 - Tic-Tac-Toe/frontend/: index.html  script.js
inc/: Application.h  Label.h  Object.h  Widget.h
src/: Application.cpp
